kubernetes/kube-deployment-old.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: demo-service
  name: demo-service
  namespace: default
spec:
  replicas: 4
  selector:
    matchLabels:
      app: demo-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: demo-service
    spec:
      containers:
      - image: sau2382/demo-rest-service:0.0.1-SNAPSHOT
        imagePullPolicy: IfNotPresent
        name: demo-service
        readinessProbe:
          httpGet:
            port: 80
            path: /demoservice/actuator/health/readiness
        livenessProbe:
          httpGet:
            port: 80
            path: /demoservice/actuator/health/liveness            
      - image: sau2382/spring-cloud-config-server:0.0.1-SNAPSHOT
        imagePullPolicy: IfNotPresent
        name: spring--cloud-config
      restartPolicy: Always

-----
apiVersion: v1
kind: Service
metadata:
  name: demo-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: demo-service
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-service
  name: demo-service
  namespace: default
spec:
  ports:
  - name: demo-service
    port: 80
    protocol: TCP
    targetPort: 80
  - name: spring-config
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: demo-service
  sessionAffinity: None
  type: LoadBalancer
